Updated InstallingGitVersion (markdown)