@@ -44,17 +44,6 @@ The source is to be downloaded from GitHub in two steps: by creating a local clo
   * In **Branch Selection** windows, 
     * check the master branch 
     * Next
-    * Note: If you are using Ubuntu 16 and you did not find any branch in this windows, may be your eclipse has a bug related with the OS. The workaround should be: 
-        * Close eclipse
-        * Open eclipse.ini
-        * Add these 2 lines before **--launcher.appendVmargs**:
-
-        --launcher.GTK_version   
-        2
-        * Change required version of java from : -Dosgi.requiredJavaVersion=1.7 into -Dosgi.requiredJavaVersion=1.8
-        * Remove this line: -XX:MaxPermSize=256m
-        * Save and close eclipse.ini
-        * Start eclipse and redo from step 1
 
 ![Git branch selection](resources/images/developpingExtension/GIT_branch_selection.png)
   * In **Local Destination** windows,
@@ -64,31 +53,45 @@ The source is to be downloaded from GitHub in two steps: by creating a local clo
 ![Local destination](resources/images/developpingExtension/GIT_local_destination.png)
 This can take a while...
 
+
 ### Import projects into workspace
 You have now to import projects into the workspace (notice that the folders downloaded during the clone will neither be copied nor moved).
 
-1. In the **Git perspective** and the **Git Repositories** view, Right-Click on "Working Tree" inside the `gama` repository, and choose "Import projects"
+_**Note:** contrarily to previous Eclipse versions, import project from the Git perspective does not work properly for GAMA._
+
+1. In the **Java perspective**, choose:
 ![Context Working tree](resources/images/developpingExtension/GIT_Context_WorkingDirectory.png)
-  * In the **Select a wizard to use for importing projects** window:
-    * "Import existing projects" should be checked
-    * "Working Tree" should be selected
+
+  * `File` / `Import...`,
+  * In the install window, select `Git` / `Projects from Git`,
+  * Click on Next,
+  * In the `Project from Git` window, select `Existing local repository.`,
+  * Click on Next,
+  * In the newt window, select your Git repository,
+  * Click on Next,
 ![GIT Import projects](resources/images/developpingExtension/GIT_Import_projects.png)    
-  * In **Import Projects** window:
-    * **Uncheck « Search for nested project »**
-    * Check the projects you want to import
-    * Finish
+
+  * In the **Select a wizard to used to import projects**, check that 
+    * Import existing Eclipse projects is selected
+    * Working Tree is selected
+  * Click on Next,
+  * In the **Import project** window,
+    * **Uncheck Search for nested projects**
+    * Select all the projects
 ![Choose Projects to import](resources/images/developpingExtension/GIT_ChooseProjectToImport.png)
-2. Go back to the Java perspective
+
+  * Finish
 3. Clean project (Project menu > Clean ...)
+
 
 ### If you have errors...
 If errors continue to show on in the different projects, be sure to correctly set the JDK used in the Eclipse preferences. GAMA is targeting JDK 1.8, and Eclipse will produce errors if it not found in your environment. So, either you set the compatibility to 1.8 by default (in Preferences > Java > Compiler > Compiler Compliance Level) or you change the error produced by Eclipse to a warning only (in Preferences > Java > Compiler > Building > "No strictly compatible JRE for execution environment available).
 
 ### Run GAMA
 1. In the `ummisco.gama.product` plugin, open the `gama.runtime.product` file (`gama.product` is used to produce the release).
-2. Go to "Contents" tab and click on "Add required"
 3. Go to "Overview" tab and click on Synchronize
 4. Click on Launch an Eclipse Application
+
 
 ###GIT Tutorials
 For those who want learn more about Git and Egit, please consult the following tutorials/papers
